SET(CHATROOM_VERSION_MAJOR 1)
SET(CHATROOM_VERSION_MINOR 2)
SET(CHATROOM_VERSION_PATCH 0)
SET(CHATROOM_VERSION "${CHATROOM_VERSION_MAJOR}.${CHATROOM_VERSION_MINOR}.${CHATROOM_VERSION_PATCH}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
add_definitions(-DCHATROOM_VERSION="${CHATROOM_VERSION}")

SET(CHATROOM_HDRS
	cconsole.h
	crooms.h
	cpichatroom.h
)

SET(CHATROOM_SRCS
	cconsole.cpp
	crooms.cpp
	cpichatroom.cpp
)

ADD_LIBRARY(libchatroom_pi MODULE ${CHATROOM_SRCS})
SET_TARGET_PROPERTIES(libchatroom_pi PROPERTIES OUTPUT_NAME "chatroom_pi")

INSTALL(TARGETS libchatroom_pi LIBRARY DESTINATION ${PLUGINDIR})
