SET(FLOODPROT_VERSION_MAJOR 1)
SET(FLOODPROT_VERSION_MINOR 5)
SET(FLOODPROT_VERSION_PATCH 0)
SET(FLOODPROT_VERSION "${FLOODPROT_VERSION_MAJOR}.${FLOODPROT_VERSION_MINOR}.${FLOODPROT_VERSION_PATCH}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
add_definitions(-DFLOODPROT_VERSION="${FLOODPROT_VERSION}")

SET(FLOODPROT_HDRS
	cfloodprotect.h
	cpifloodprot.h
)

SET(FLOODPROT_SRCS
	cfloodprotect.cpp
	cpifloodprot.cpp
)

ADD_LIBRARY(libfloodprot_pi MODULE ${FLOODPROT_SRCS})
SET_TARGET_PROPERTIES(libfloodprot_pi PROPERTIES OUTPUT_NAME "floodprot_pi")

INSTALL(TARGETS libfloodprot_pi LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}) 
