SET(FORBID_VERSION_MAJOR 1)
SET(FORBID_VERSION_MINOR 4)
SET(FORBID_VERSION_PATCH 0)
SET(FORBID_VERSION "${FORBID_VERSION_MAJOR}.${FORBID_VERSION_MINOR}.${FORBID_VERSION_PATCH}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
ADD_DEFINITIONS(-DFORBID_VERSION="${FORBID_VERSION}")

SET(FORBID_HDRS
	cconsole.h
	cforbidden.h
	cpiforbid.h
)

SET(FORBID_SRCS
	cconsole.cpp
	cforbidden.cpp
	cpiforbid.cpp
)

ADD_LIBRARY(libforbid_pi MODULE ${FORBID_SRCS})
SET_TARGET_PROPERTIES(libforbid_pi PROPERTIES OUTPUT_NAME "forbid_pi")

INSTALL(TARGETS libforbid_pi LIBRARY DESTINATION lib)
