SET(IPLOG_VERSION_MAJOR 1)
SET(IPLOG_VERSION_MINOR 2)
SET(IPLOG_VERSION_PATCH 0)
SET(IPLOG_VERSION "${IPLOG_VERSION_MAJOR}.${IPLOG_VERSION_MINOR}.${IPLOG_VERSION_PATCH}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
ADD_DEFINITIONS(-DIPLOG_VERSION="${IPLOG_VERSION}")

SET(IPLOG_HDRS
	cconsole.h
	ciplog.h
	cpiiplog.h
)

SET(IPLOG_SRCS
	cconsole.cpp
	ciplog.cpp
	cpiiplog.cpp
)

ADD_LIBRARY(libiplog_pi MODULE ${IPLOG_SRCS})
SET_TARGET_PROPERTIES(libiplog_pi PROPERTIES OUTPUT_NAME "iplog_pi")

INSTALL(TARGETS libiplog_pi LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
