SET(ISP_VERSION_MAJOR 1)
SET(ISP_VERSION_MINOR 2)
SET(ISP_VERSION_PATCH 0)
SET(ISP_VERSION "${ISP_VERSION_MAJOR}.${ISP_VERSION_MINOR}.${ISP_VERSION_PATCH}")

ADD_DEFINITIONS(-DISP_VERSION="${ISP_VERSION}")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(ISP_HDRS
	cconsole.h
	cisps.h
	cpiisp.h
)

SET(ISP_SRCS
	cconsole.cpp
	cisps.cpp
	cpiisp.cpp
)

ADD_LIBRARY(libisp_pi MODULE ${ISP_SRCS})
SET_TARGET_PROPERTIES(libisp_pi PROPERTIES OUTPUT_NAME "isp_pi")

INSTALL(TARGETS libisp_pi LIBRARY DESTINATION ${PLUGINDIR})
