SET(MESSENGER_VERSION_MAJOR 1)
SET(MESSENGER_VERSION_MINOR 3)
SET(MESSENGER_VERSION_PATCH 0)
SET(MESSENGER_VERSION "${MESSENGER_VERSION_MAJOR}.${MESSENGER_VERSION_MINOR}.${MESSENGER_VERSION_PATCH}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
ADD_DEFINITIONS(-DMESSENGER_VERSION="${MESSENGER_VERSION}")

SET(MESSENGER_HDRS
	cconsole.h
	cmsglist.h
	cpimessanger.cpp
)

SET(MESSENGER_SRCS
	cconsole.cpp
	cmsglist.cpp
	cpimessanger.cpp
)

ADD_LIBRARY(libmessenger_pi MODULE ${MESSENGER_SRCS})
SET_TARGET_PROPERTIES(libmessenger_pi PROPERTIES OUTPUT_NAME "messenger_pi")

INSTALL(TARGETS libmessenger_pi LIBRARY DESTINATION ${PLUGINDIR})
