SET(PLUGMAN_VERSION_MAJOR 1)
SET(PLUGMAN_VERSION_MINOR 2)
SET(PLUGMAN_VERSION_PATCH 0)
SET(PLUGMAN_VERSION "${PLUGMAN_VERSION_MAJOR}.${PLUGMAN_VERSION_MINOR}.${PLUGMAN_VERSION_PATCH}")

INCLUDE_DIRECTORIES(${VERLIHUB_BINARY_DIR} ${VERLIHUB_SOURCE_DIR}/src)

ADD_DEFINITIONS(-DPLUGMAN_VERSION="${PLUGMAN_VERSION}")

SET(PLUGMAN_SRCS
	cpiplug.cpp
	cplugs.cpp
	cconsole.cpp
)

SET(PLUGMAN_HDRS
	cpiplug.h
	cplugs.h
	cconsole.h
)

ADD_LIBRARY(plug_pi MODULE ${PLUGMAN_SRCS})
target_link_libraries(plug_pi libverlihub)
INSTALL(TARGETS plug_pi LIBRARY DESTINATION lib)
